@@ -15,6 +15,7 @@
 	std : added epoll support
 	all : libneko.so can now be loaded from current directory
 	vm : comparisons with NaN and Int/Float now always returns false
+	api : added kind_lookup
 	
 2013-02-23 : 2.0.0
 	all : changed license to MIT
